--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,6 @@ body {
 
 @layer components {
   .grid-option {
-    @apply rounded-md p-5 col-span-1 hover:opacity-75 border-white border-2 hover:border-wal;
+    @apply rounded-lg overflow-hidden p-5 col-span-1 hover:opacity-75 border-white border-2 hover:border-wal;
   }
 }
